<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp">

    <ImageView
      android:id="@+id/iv_login_image"
      android:src="@drawable/pup_icon1"
      android:layout_width="match_parent"
      android:layout_height="200sp"
      android:layout_gravity="center"
      android:gravity="center"
      android:textSize="50sp"
      android:contentDescription="@string/cd_login_image"/>

    <EditText
      android:id="@+id/et_login_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimary"
      android:inputType="textEmailAddress"
      android:textSize="18sp"
      android:hint="@string/email"
      tools:targetApi="lollipop"/>

    <EditText
      android:id="@+id/et_login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimary"
      android:inputType="textPassword"
      android:textSize="18sp"
      android:hint="@string/password"
      tools:targetApi="lollipop"/>

    <Button
      android:id="@+id/bt_login"
      android:onClick="login"
      android:layout_marginTop="10sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimaryAlpha80"
      android:text="@string/login"
      android:textColor="@color/colorAlmostWhite"
      android:textSize="18sp"
      tools:targetApi="lollipop"/>

    <TextView
      android:id="@+id/link_signup"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24sp"
      android:layout_marginBottom="24sp"
      android:text= "@string/tv_login_register"
      android:gravity="center"
      android:textSize="16sp"/>

    <TextView
      android:id="@+id/link_main"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24sp"
      android:text="@string/tv_login_without"
      android:gravity="center"
      android:textSize="16sp"/>

  </LinearLayout>
</ScrollView>
