<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bokeh_gray"
  tools:ignore="Overdraw">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="30sp"
      android:paddingLeft="20sp"
      android:paddingRight="20sp">

      <ImageView
        android:id="@+id/iv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_marginStart="16sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_alt"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image" />

      <Button
        android:id="@+id/bt_take_picture"
        android:layout_marginTop="25sp"
        android:layout_width="300sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background = "@drawable/round_button_primary"

        android:textSize="16sp"
        android:textColor="@color/colorAlmostWhite"
        android:onClick="takePicture"
        android:text="@string/picture_bt"/>

      <Button
        android:id="@+id/bt_browse_picture"
        android:layout_marginTop="15sp"
        android:layout_width="300sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background = "@drawable/round_button_primary"
        android:textSize="16sp"
        android:textColor="@color/colorAlmostWhite"
        android:onClick="browseGallery"
        android:text="@string/gallery_bt" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tools:ignore="UselessParent">

          <Button
            android:id="@+id/bt_submit_main"
            android:layout_width="300sp"
            android:background = "@drawable/round_button_secondary"
            android:textColor="@color/colorAlmostWhite"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:clickable="false"
            android:onClick="submit"
            android:text="@string/classify_bt"
            android:textSize="16sp"
            android:visibility="invisible" />

          <ProgressBar
            android:id="@+id/main_progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        </FrameLayout>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</FrameLayout>