<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/tv_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginTop="5sp"
    android:text="@string/friendact_fheader"
    android:textColor="@color/colorBlazeOrange"
    android:textSize="25sp" />

  <ListView
    android:id="@+id/lv_friends"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/tv_friend_none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    android:visibility="invisible" />

  <TextView
    android:id="@+id/tv_pending_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:text="@string/friendact_pheader"
    android:textColor="@color/colorBlazeOrange"
    android:textSize="25sp" />

  <ListView
    android:id="@+id/lv_pending"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/tv_pending_none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    android:visibility="invisible" />

  <TextView
    android:id="@+id/tv_request_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:text="@string/friendact_rheader"
    android:textColor="@color/colorBlazeOrange"
    android:textSize="25sp" />

  <ListView
    android:id="@+id/lv_request"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/tv_request_none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    android:visibility="invisible" />

  <TextView
    android:id="@+id/tv_suggest_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginTop="5sp"
    android:text="@string/friendact_sheader"
    android:textColor="@color/colorBlazeOrange"
    android:textSize="25sp" />

  <ListView
    android:id="@+id/lv_suggest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/tv_suggest_none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5sp"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginTop="5sp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    android:visibility="invisible" />

</LinearLayout>