<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:background="@color/colorAlmostWhite"
    android:layout_width="match_parent"
    android:layout_height="250sp"
    android:layout_marginTop="30sp"
    android:orientation="vertical">
    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
        android:id="@+id/iv_profile"
        android:src="@drawable/user"
        android:layout_gravity="center_horizontal"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:visibility="invisible"
        android:contentDescription="@string/cd_profile_image"/>
      <ProgressBar
        android:id="@+id/pb_profile"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center_horizontal"/>
    </FrameLayout>
    <TextView
      android:id="@+id/tv_profile_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10sp"
      android:layout_gravity="center_horizontal"
      android:textColor="@color/colorBlack"
      android:textStyle="bold"
      android:textSize="20sp"
      tools:ignore="SelectableText"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="360sp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="25sp"
      android:paddingRight="25sp"
      android:orientation="horizontal"
      tools:ignore="UseCompoundDrawables">
      <ImageView
        android:id="@+id/iv_profile_email"
        app:srcCompat="@drawable/ic_email_black"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:contentDescription="@string/cd_profile_icon1"/>
      <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textStyle="bold"
        tools:ignore="SelectableText"/>
    </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="25sp"
      android:paddingLeft="25sp"
      android:paddingRight="25sp"
      android:orientation="horizontal"
      tools:ignore="UseCompoundDrawables">
      <ImageView
        android:id="@+id/iv_profile_location"
        android:src="@drawable/ic_location"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:contentDescription="@string/cd_profile_icon2"/>
      <TextView
        android:id="@+id/tv_profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textStyle="bold"
        tools:ignore="SelectableText"/>
    </LinearLayout>
  </LinearLayout>
  <Button
    android:id="@+id/bt_profile"
    android:layout_width="300sp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:background = "@drawable/round_button_secondary"
    android:text="@string/bt_profile_edit"
    android:textColor="@color/colorAlmostWhite"
    android:textSize="20sp"
    android:onClick="EditProfile"/>
</LinearLayout>